--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,7 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Roboto:ital@1&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    font-family: 'IBM Plex Sans', sans-serif;
+    background: linear-gradient(90deg, rgba(102,190,201,1) 0%, rgba(116,196,206,1) 30%, rgba(129,201,210,1) 100%);
+    margin: 0;
 }
